# mcp-grafana

./: .env.oauth2-forward-test  .env.oauth2-test  .gitignore  .golangci.yaml  .goreleaser.yaml  .mcp.json  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.alpine  Makefile  OAUTH2_AUTH_PROXY_PLAN.md  OAUTH2_FILE_INVENTORY.md  OAUTH2_IMPLEMENTATION.md  OAUTH2_QUICK_START.md  OAUTH2_SETUP_COMPLETE.md  OAUTH2_TESTING_ENVIRONMENT_READY.md  OAUTH2_USER_CENTRIC_COMPLETE.md  OAUTH2_USER_CENTRIC_MODEL.md  PANEL_FEATURES_CONTRIBUTION.md  QUICKSTART.md  README.md  START_HERE.sh  YOUR_QUESTION_ANSWERED.md  capability.go  capability_integration_test.go  capability_test.go  client_cache.go  client_cache_test.go  docker-compose.yaml  dynamic_tools.go  go.mod  go.sum  golangci-lint.mod  golangci-lint.sum  grafana_instance.go  grafana_instance_test.go  k8s_client.go  k8s_client_test.go  k8s_discovery.go  (+39 more)
.claude-plugin/: install-binary.mjs  install-binary.sh  plugin.json
.codex-plugin/: plugin.json
.githooks/: pre-push
.github/: zizmor.yml
auth/: authorize.go  authorize_test.go  bootstrap.go  bootstrap_test.go  callback.go  callback_test.go  config.go  config_test.go  crypto.go  crypto_test.go  (+34 more)
tests/: README.md  admin_test.py  auth_test.py  clickhouse_test.py  cloudwatch_logs_test.py  cloudwatch_test.py  conftest.py  dashboards_test.py  disable_write_test.py  loki_test.py  mcp_eval_utils.py  navigation_test.py  opensearch_test.py  pyproject.toml  rendering_test.py  tempo_test.py  utils.py
tests/ageval/: README.md  alerting.test.js  grafana.mcp.json
tests/mock_oidc/: main.go
(+337 files in other folders)
