[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Sully", email = "ben.sully@grafana.com" },
    { name = "Ioanna Armouti", email = "ioanna.armouti@grafana.com" },
    { name = "Chris Marchbanks", email = "chris.marchbanks@grafana.com" },
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "langevals[langevals]>=0.1.8",
    "litellm>=1.63.12",
    "mcp>=1.1.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
